--- a/minnews/package.json
+++ b/minnews/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "core-js": "^3.4.3",
     "vant": "^2.2.16",
     "vue": "^2.6.10",
@@ -18,6 +19,7 @@
     "@vue/cli-service": "^4.1.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "postcss-pxtorem": "^4.0.1",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
