--- a/minnews/package.json
+++ b/minnews/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "babel-plugin-import": "^1.13.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "postcss-pxtorem": "^4.0.1",
